cambios en footer

--- a/footer.html
+++ b/footer.html
@@ -5,8 +5,9 @@
     <title>archivo de footer</title>
 </head>
 <body>
- <div style="background-color: aqua; color:#000000; font-family: Arial; font-size: 30px; text-align: center;">
-     <h1>este es el footer</h1>
- </div>
+<div style="background-color: aqua; color:#000000; font-family: Arial; font-size: 30px; text-align: center;">
+    <h1>este es el footer</h1>
+    <p>primer cambio</p>
+</div>
 </body>
 </html>
